src/main/java/com/example/turnpage/global/error/exception/EntityNotFoundException.java
package com.example.turnpage.global.error.exception;

import com.example.turnpage.global.error.ErrorCode;

public class EntityNotFoundException extends BusinessException {
    public EntityNotFoundException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }

    public EntityNotFoundException(ErrorCode errorCode) {
        super(errorCode);
    }
}
